# cpp-qt-client

./: CMakeLists.txt  README.md  _choose_language_form.ui  add-contact.cpp  add-contact.h  add-contact.ui  appdata  ch_lang.cpp  ch_lang.h  ch_lang.ui  change-password.cpp  change-password.ui  choose_language.cpp  choose_language.h  choose_language_form.cpp  choose_language_form.h  choose_language_form.ui  create-chat.cpp  create-chat.h  create-chat.ui  credits.cpp  credits.h  credits.ui  cryptography.cpp  cryptography.h  databaseAI.cpp  databaseAI.h  freenet_settings.cpp  freenet_settings.h  freenet_settings.ui  general_settings.cpp  general_settings.h  general_settings.ui  i2p_settings.cpp  i2p_settings.h  i2p_settings.ui  key-viewer.cpp  key-viewer.h  key-viewer.ui  locales.cpp  (+13 more)
build-pm-client-source-code-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  appdata  build.ninja  cmake_install.cmake  pm-client-source-code  qtcsettings.cmake
build-pm-client-source-code-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-0ea06c9cbbc4af11eaf2.json  cmakeFiles-v1-eee4d083ad17edee0e72.json  codemodel-v2-3a16bfb408415e4408df.json  codemodel-v2-4c64cc4aa661cf506a1a.json  codemodel-v2-657542ae6f2111e202db.json  codemodel-v2-f7333d97b213337e246f.json  directory-.-Debug-a8850b45e4b92455dfdb.json  index-2023-02-08T16-51-59-0662.json  index-2023-02-09T12-39-59-0144.json  index-2023-02-09T12-52-00-0803.json  index-2023-02-15T15-08-00-0756.json  (+6 more)
build-pm-client-source-code-Desktop-Debug/.qt/: QtDeploySupport.cmake
build-pm-client-source-code-Desktop-Debug/pm-client-source-code_autogen/: deps  moc_predefs.h
build-pm-client-source-code-Desktop-Debug/pm-client-source-code_autogen/EWIEGA46WW/: moc_credits.cpp  moc_credits.cpp.d  moc_freenet_settings.cpp  moc_freenet_settings.cpp.d  moc_general_settings.cpp  moc_general_settings.cpp.d  moc_i2p_settings.cpp  moc_i2p_settings.cpp.d  moc_log_in_form.cpp  moc_log_in_form.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  qrc_source.cpp
build-pm-client-source-code-Desktop-Debug/pm-client-source-code_autogen/include/: ui_credits.h  ui_freenet_settings.h  ui_general_settings.h  ui_i2p_settings.h  ui_log_in_form.h  ui_mainwindow.h
build-pm-client-source-code-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appdata  build.ninja  cmake_install.cmake
build-pm-client-source-code-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-pm-client-source-code-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-pm-client-source-code-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/nodejs_tools/cryptography/: main-module.js
build-pm-client-source-code-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/nodejs_tools/database/: package-lock.json  package.json
build-pm-client-source-code-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/pm-client-source-code_autogen/: deps  mocs_compilation.cpp
build-pm-client-source-code-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/pm-client-source-code_autogen/EWIEGA46WW/: moc_credits.cpp.d  moc_freenet_settings.cpp.d  moc_general_settings.cpp  moc_general_settings.cpp.d  moc_i2p_settings.cpp  moc_i2p_settings.cpp.d  moc_log_in_form.cpp  moc_log_in_form.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d  qrc_source.cpp
build-pm-client-source-code-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/pm-client-source-code_autogen/include/: ui_general_settings.h  ui_i2p_settings.h  ui_log_in_form.h  ui_mainwindow.h
build-pm-client-source-code-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/spik-source_autogen/: deps
build-pm-client-source-code-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/spik-source_autogen/EWIEGA46WW/: moc_credits.cpp  moc_credits.cpp.d  moc_freenet_settings.cpp  moc_freenet_settings.cpp.d  moc_general_settings.cpp.d  moc_i2p_settings.cpp.d  moc_log_in_form.cpp.d  moc_mainwindow.cpp.d  qrc_source.cpp
build-pm-client-source-code-Desktop_Qt_6_4_1_MinGW_64_bit-Debug/spik-source_autogen/include/: ui_credits.h  ui_freenet_settings.h  ui_mainwindow.h
linux-functions/: create-process.cpp  create-process.h  nodejs-run.cpp  nodejs-run.h
pm-client-source-code/: CMakeLists.txt  appdata  authorize.cpp  authorize.h  credits.cpp  credits.h  cryptography.cpp  cryptography.h  databaseAI.cpp  databaseAI.h  freenet_settings.cpp  freenet_settings.h  freenet_settings.ui  general_settings.cpp  general_settings.h  general_settings.ui  i2p_settings.cpp  i2p_settings.h  i2p_settings.ui  legacy_databaseAI.cpp  legacy_databaseAI.h  locales.cpp  locales.h  log_in_form.cpp  log_in_form.h  log_in_form.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  source.qrc  sqlite3-dbInterface.cpp  sqlite3-dbInterface.h
pm-client-source-code/nodejs_tools/cryptography/: md5-gen.js
pm-client-source-code/nodejs_tools/database/: authed.js  has-account.js  package-lock.json  package.json  register.js  set-value.js
pm-client-source-code/sqlite3-lib/win64/def/: sqlite3_64.def  sqlite_64
pm-client-source-code/win-functions/: create-process.cpp  create-process.h
sqlite3/: shell.c  sqlite3.h
sqlite3-lib/win64/nodejs/: node_etw_provider.man
win-functions/: create-process.cpp  create-process.h  nodejs-run.cpp
windows/i2p/: README.txt
windows/nodejs_tools/cryptography/: aes-encode.js  aes-keygen.js  main-module.js  package-lock.json  package.json
windows/nodejs_tools/database/: choose-language.js  db-conn.js  get-general-settings.js  get-messages-md5.js  get-my-contacts.js  get-my-i2p-address.js  get-my-keys.js  get-my-login-id.js  get-my-messages.js  get-value.js  here.js  log-in-from-file.js  log-in.js  logout-now.js  package-lock.json  package.json  refresh-password.js  register.js  remove-contact.js  save-my-account.js  set-general-settings.js
windows/nodejs_tools/i2p/: package-lock.json  package.json  setup-config.js
windows/nodejs_tools/requests/: add-contact-by-address.js  create-dialog.js  new-message.js  package-lock.json  package.json
windows/nodejs_tools/server/: package-lock.json  package.json  server.js
windows/nodejs_tools/server/api/: index.js  types.js
(+155 files in other folders)
